--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <section id="about">
             <div class="section-content">
                 <h2>About me</h2>
-                <p>I am a Bachelor of Computer Applications student who is passionate to learn new technologies to improve technical skill.I'm dedicated to staying up to date with the latest trends abd innovations. </p>
+                <p>I am a Bachelor of Computer Applications student who is passionate to learn new technologies to improve technical skill.I'm dedicated to staying up to date with the latest trends and innovations. </p>
             </div>
         </section>
         <section id="education">
