--- a/index7.html
+++ b/index7.html
@@ -25,7 +25,7 @@
         <img class="obj-planet" src="images/venus.png" alt="venus"><br>
      <div>
         <h2>Venus</h2>
-        <p>"Venus is the second planet from the Sun. It is a rocky planet with the densest atmosphere of all the rocky bodies in the Solar System, and the only one with a mass and size that is close to that of its orbital neighbour Earth.</p>
+        <p>Venus is the second planet from the Sun. It is a rocky planet with the densest atmosphere of all the rocky bodies in the Solar System, and the only one with a mass and size that is close to that of its orbital neighbour Earth.</p>
         </div>
    
    
